<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            app:layout_constraintBaseline_toBaselineOf="@+id/editName"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"/>
    <TextView
            android:text="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintBaseline_toBaselineOf="@+id/editDescription"
            app:layout_constraintEnd_toStartOf="@+id/editName" android:layout_marginEnd="24dp"/>
    <Button
            android:text="@string/task_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editDescription" android:onClick="onClick"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editName"
            android:minHeight="48dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toEndOf="@+id/textView"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView8"
            android:hint="@string/name_desc" android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editDescription"
            android:minHeight="48dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/editName"
            android:hint="@string/description_desc" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="24dp" app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.555" android:layout_marginEnd="24dp"/>
    <TextView
            android:text="@string/add_item_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView8"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="20sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>