<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">
    <Button
            android:text="@string/add_task"
            android:layout_width="115dp"
            android:layout_height="60dp" android:id="@+id/ButtonList"
            app:layout_constraintEnd_toStartOf="@+id/ButtonAddTask" android:layout_marginEnd="8dp"
            android:onClick="setAddFragment" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/list"
            android:layout_width="100dp"
            android:layout_height="60dp" android:id="@+id/ButtonAddTask"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/about"
            android:layout_width="115dp"
            android:layout_height="60dp" android:id="@+id/ButtonAbout"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/ButtonAddTask"
            android:onClick="setAboutFragment" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"/>
    <androidx.fragment.app.FragmentContainerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/fragmentContainerView2"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/ButtonAddTask"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>